--- a/HotelBooking/Web.config
+++ b/HotelBooking/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HotelBooking-20220731022929.mdf;Initial Catalog=aspnet-HotelBooking-20220731022929;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HotelBooking-20220731022929.mdf;Initial Catalog=aspnet-HotelBooking-20220731022929;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HotelBookingContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=HotelBooking;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
