--- a/HotelBooking/HotelBooking.csproj
+++ b/HotelBooking/HotelBooking.csproj
@@ -177,6 +177,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HotelsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -184,11 +185,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Constants.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Availability.cs" />
     <Compile Include="Models\Hotel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\WriteEmailViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -259,7 +262,7 @@
     <Content Include="Views\Hotels\Details.cshtml" />
     <Content Include="Views\Hotels\Edit.cshtml" />
     <Content Include="Views\Hotels\Index.cshtml" />
-    <Content Include="Views\Hotels\WriteEmail.cshtml" />
+    <Content Include="Views\Email\WriteEmail.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
