--- a/HotelBooking/HotelBooking.csproj
+++ b/HotelBooking/HotelBooking.csproj
@@ -229,6 +229,14 @@
     <Compile Include="Migrations\202208130708327_Rating.designer.cs">
       <DependentUpon>202208130708327_Rating.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208140633039_RoomsUpdate.cs" />
+    <Compile Include="Migrations\202208140633039_RoomsUpdate.designer.cs">
+      <DependentUpon>202208140633039_RoomsUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202208140636569_RatingsUpdate.cs" />
+    <Compile Include="Migrations\202208140636569_RatingsUpdate.designer.cs">
+      <DependentUpon>202208140636569_RatingsUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Availability.cs" />
@@ -248,16 +256,20 @@
     <Content Include="App_Data\aspnet-HotelBooking-20220731022929_log.ldf">
       <DependentUpon>aspnet-HotelBooking-20220731022929.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\beach_banner.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\hotel.jpg" />
+    <Content Include="Content\hotel_banner.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -319,6 +331,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202208130708327_Rating.resx">
       <DependentUpon>202208130708327_Rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208140633039_RoomsUpdate.resx">
+      <DependentUpon>202208140633039_RoomsUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208140636569_RatingsUpdate.resx">
+      <DependentUpon>202208140636569_RatingsUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
